objects/ASI_CRM_Exchange_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Exchange_Order__c</fullName>
        <label>Exchange Order</label>
        <referenceTo>ASI_CRM_Exchange_Order__c</referenceTo>
        <relationshipName>Exchange_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Order_Type__c</fullName>
        <description>No of Order Type - S4/S5/S9</description>
        <formula>IF
(
(TEXT(ASI_CRM_Sales_Order_History_Detail__r.ASI_HK_CRM_Sales_Order_History__r.ASI_HK_CRM_Order_Type__c) = &apos;S4&apos; 
|| 
TEXT(ASI_CRM_Sales_Order_History_Detail__r.ASI_HK_CRM_Sales_Order_History__r.ASI_HK_CRM_Order_Type__c) = &apos;S5&apos;
||
TEXT(ASI_CRM_Sales_Order_History_Detail__r.ASI_HK_CRM_Sales_Order_History__r.ASI_HK_CRM_Order_Type__c) = &apos;S9&apos;)
, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Remark__c</fullName>
        <formula>ASI_CRM_Sales_Order_History_Detail__r.ASI_HK_CRM_Sales_Order_History__r.ASI_HK_CRM_Order_No__c + &apos; - &apos; + TEXT(ASI_CRM_Sales_Order_History_Detail__r.ASI_HK_CRM_Sales_Order_History__r.ASI_HK_CRM_Order_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Sales_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Item</label>
        <referenceTo>ASI_HK_CRM_Sales_Order_Item__c</referenceTo>
        <relationshipName>Exchange_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty_Bt_PC__c</fullName>
        <label>Qty (Bt/PC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipName>Exchange_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Order_History_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order History Detail</label>
        <referenceTo>ASI_HK_CRM_Sales_Order_History_Detail__c</referenceTo>
        <relationshipName>Exchange_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_return_amount__c</fullName>
        <formula>ASI_CRM_Sales_Order_History_Detail__r.ASI_HK_CRM_Base_Price_Bottle__c  * ASI_CRM_Qty_Bt_PC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Exchange / Return Order Item</label>
    <nameField>
        <displayFormat>EOI-{00000000}</displayFormat>
        <label>Exchange Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange / Return Order Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_Exchange_Order_Item</fullName>
        <active>true</active>
        <label>HK Exchange Order Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>